# zbar

./: .travis.yml  Makefile.am  configure.ac
debian/: control  rules
gtk/: Makefile.am
test/: Makefile.am.inc  test_gi.py
